[package]
name = "openai-rs"
version = "0.0.1"
homepage = "https://tribecore.io/openai-rs"
repository = "https://github.com/gqadonis/openai-rs/"
authors = ["Travis James <travis@tribehealthsolutions.com>"]
description = "APIs for sampling from and fine-tuning language models"
# Override this license by providing a License Object in the OpenAPI.
license = "MIT"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
